QtConcurrent::run crashes on program exit

When an application is about to be closed and all the
destructors are called, if there isQtConcurrent::run on
the way, it crashes as the internal threadpool pointer
is nullptr.

Fixes: QTBUG-98901
Change-Id: Idd84d1518fc6a225263e6666a0f1de2ccef79c82
(cherry picked from commit 87b93c29be02f0a7ff9424b5e2b6431e20bd4c40)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>